# Gradient-Tool-with-Rust

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  demo.sh  fly.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  main.rs  models.rs
crates/api/src/routes/: gradient.rs  image.rs  mod.rs  render.rs
crates/gradient/: Cargo.toml
crates/gradient/src/: color.rs  extractor.rs  gradient.rs  lib.rs  render.rs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ColorPalette.tsx  GradientControls.tsx  GradientPreview.tsx  ImageUpload.tsx
