[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
gradient = { path = "../gradient" }
image = { version = "0.24", default-features = false }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
